# quiz-bot

./: .gitignore  Cargo.toml  Dockerfile  config.example.toml
migrations/: 001_initial.sql  002_fix_round_totals.sql
src/: commands.rs  config.rs  db.rs  explainer.rs  fetcher.rs  format.rs  main.rs  quiz.rs  scheduler.rs  state.rs
